--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,8 +3,8 @@ GameDefaultMap=None
 EditorStartupMap=None
 GlobalDefaultGameMode=/Game/Liu/1Lobby/LobbyGameMode.LobbyGameMode_C
 GameInstanceClass=/Game/Liu/OsuGameInstance.OsuGameInstance_C
-ServerDefaultMap=/Game/Liu/Map/Lobby.Lobby
-TransitionMap=/Game/Liu/Map/Lobby.Lobby
+ServerDefaultMap=/Game/Liu/Map/Map.Map
+TransitionMap=None
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
