--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=None
+GameDefaultMap=/Game/Liu/Map/TitleMap.TitleMap
 EditorStartupMap=None
 GlobalDefaultGameMode=/Game/Liu/1Lobby/LobbyGameMode.LobbyGameMode_C
 GameInstanceClass=/Game/Liu/OsuGameInstance.OsuGameInstance_C
-ServerDefaultMap=/Game/Liu/Map/Map.Map
+ServerDefaultMap=None
 TransitionMap=None
 
 [/Script/Engine.RendererSettings]
