Windowsサーバーで動作させるための調整

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Liu/Map/TitleMap.TitleMap
-EditorStartupMap=None
+EditorStartupMap=/Game/Liu/Map/TitleMap.TitleMap
 GlobalDefaultGameMode=/Game/Liu/1Lobby/LobbyGameMode.LobbyGameMode_C
 GameInstanceClass=/Game/Liu/OsuGameInstance.OsuGameInstance_C
-ServerDefaultMap=None
+ServerDefaultMap=/Game/Liu/Map/Lobby.Lobby
 TransitionMap=None
 
 [/Script/Engine.RendererSettings]
